# bimanual-task-motion-planning

./: CMakeLists.txt  README.md  bimanual_simulation_instructions.txt  instructions_to_run_collab_demo.txt  instructions_to_run_demo.txt  instructions_to_write_action_specification_file.txt  package.xml
bimanual-action-planners/: CMakeLists.txt  Things_to_remember.txt  package.xml
bimanual-action-planners/action/: PLAN2CTRL.action
bimanual-action-planners/launch/: record_bimanual_demos.launch  record_bimanual_demos_simple.launch  record_glove_ft.launch
bimanual-action-planners/scripts/: autonomous_scooping.py  back_to_init.py  back_to_init_scoop.py  back_to_init_scoop_init_reach.py  bimanual_test.py  decoupled_test.py  peeling_demo.py  peeling_demo_nostop.py  scooping_collab_active.py  scooping_collab_passive.py  scooping_demo.py  scooping_demo_ft.py  scooping_demo_nocorr.py  scooping_human_slave.py  uncoupled_test.py  virtual_object_test.py
bimanual-motion-planner/: CMakeLists.txt  package.xml
bimanual-motion-planner/include/: bimanual_action_server.h
bimanual-motion-planner/include/bimanual_action_server/: bimanual_action_server.h
bimanual-motion-planner/launch/: bimanual_action_server.launch  bimanual_test.launch  decoupled_test.launch  peeling_bimanual_action_server.launch  scooping_auto_bimanual_action_server.launch  scooping_bimanual_action_server.launch  scooping_bimanual_autonomous_execution.launch  scooping_collab_bimanual_action_server.launch
bimanual-motion-planner/src/: autonomous_coupled_motion_planner.cpp  bimanual_action_server.cpp  bimanual_action_server_node.cpp  bimanual_motion_planner.cpp  decoupled_motion_planner.cpp
bimanual-motion-planner/src/bimanual_action_server/: base_action_functions.cpp  bimanual_action_server.cpp  bimanual_gotocart_functions.cpp  collab_active_functions.cpp  collab_passive_functions.cpp  cplCDS_action_functions.cpp  force_ctrl_functions.cpp  ros_sub_pub_functions.cpp  uncplCDS_action_functions.cpp  voDS_action_functions.cpp
bimanual-motion-planner/src/tests/: collaborative_coupled_motion_planner.cpp  decoupled_motion_planner.cpp
bimanual-task-models/peeling_task/: PhaseIds  PhaseIds~
bimanual-task-models/peeling_task/Phase1/: MasterSlave-Roles  MasterSlave-Roles~
bimanual-task-models/peeling_task/Phase1/Left/: slave_cplGMM.txt
bimanual-task-models/peeling_task/Phase1/Right/: master_posGMM.txt
bimanual-task-models/peeling_task/Phase1/plots/: Master_deltaOri.fig  Reach_to_Peel_Forces.fig  Reach_to_Peel_Ori.fig  Slave_norm.fig  Slave_posDyn.fig
bimanual-task-models/peeling_task/Phase2/: master_cplGMM.txt  slave_oriGMM.txt  slave_posGMM.txt
bimanual-task-models/peeling_task/Phase2/Right/: master_oriGMM.txt
bimanual-task-models/peeling_task/Phase2/peel_plots/: Raw_Peel_Forces.fig  Raw_Peel_Ori.fig  Raw_Peel_Traj.fig  convertData.m  learn_peel_master.m  master_deltaOri.fig  master_oriDyn.fig  master_posDyn.fig  slave_norm.fig
bimanual-task-models/peeling_task/Phase3/: master_oriGMM.txt
bimanual-task-models/peeling_task/Phase3/Left/: slave_oriGMM.txt  slave_posGMM.txt
bimanual-task-models/peeling_task/Phase3/Right/: master_cplGMM.txt  master_posGMM.txt
bimanual-task-models/peeling_task/Phase3/plots/: Rotate_reach_Forces.fig  Rotate_reach_Ori.fig  Rotate_reach_Torques.fig  Rotate_reach_Traj.fig  master_cpl.fig  master_dataOri.fig  master_deltaOri.fig  master_oriDyn.fig  slave_cpl.fig  slave_posDyn.fig
bimanual-task-models/peeling_task/action_peel/: master_posGMM.txt  slave_cplGMM.txt
bimanual-task-models/peeling_task/action_peel/peel_plots/: Raw_Peel_Torques.fig  learn_peel_slave.m  salve_demoData.fig  slave_cpl.fig  slave_deltaOri.fig  slave_oriDyn.fig  slave_posDyn.fig
bimanual-task-models/peeling_task/action_reach_rotate/: slave_cplGMM.txt
bimanual-task-models/peeling_task/action_reach_rotate/plots/: master_demoPos.fig  master_dyn.fig  master_norm.fig  slave_deltaOri.fig  slave_norm.fig  slave_normcpl.fig  slave_oriDyn.fig
bimanual-task-models/peeling_task/action_reach_to_peel/: master_cplGMM.txt  master_oriGMM.txt  slave_oriGMM.txt  slave_posGMM.txt
bimanual-task-models/peeling_task/action_reach_to_peel/plots/: Reach_to_Peel_Torques.fig  Reach_to_Peel_Traj.fig  Slave_OriDyn.fig  Slave_cpl.fig  Slave_deltaOri.fig  Slave_demo.fig
bimanual-task-models/scooping_task/: Phase_ds  pref_start_config
bimanual-task-models/scooping_task/Left/Phase1/: cplGMM.txt  masterGMM.txt  slaveGMM.txt  stiffnessGMM.txt
bimanual-task-models/scooping_task/Left/Phase2/: cplGMM.txt  masterGMM.txt  stiffnessGMM.txt
bimanual-task-models/scooping_task/Phase0/Left/: cplGMM.txt  masterGMM.txt
bimanual-task-models/scooping_task/Phase1/Left/: cplGMM.txt  slaveGMM.txt
bimanual-task-models/scooping_task/Phase1/Right/: cplGMM.mat  masterGMM.mat  slaveGMM.mat
bimanual-task-models/scooping_task/Phase2/Left/: cplGMM.mat  masterGMM.mat  slaveGMM.mat
bimanual-task-models/scooping_task/Phase2/Right/: cplGMM.mat  masterGMM.mat  slaveGMM.mat
bimanual-task-models/scooping_task/Phase3/Left/: cplGMM.mat  (+2 more)
bimanual-task-models/scooping_task/Phase6/: action_specification
bimanual-task-models/scooping_task/action 1/: action1_specification.yaml  armcouplingGMM.txt  masterGMM.txt  slave_posGMM.txt
bimanual-task-models/scooping_task/action 2/: action2_specification.yaml  master_oriGMM.txt  s2_slave_stiffGMM.txt  slave_posGMM.txt  slave_torqueGMM.txt
bimanual-task-models/scooping_task/action 3/: action3_specification.yaml  armcouplingGMM.txt  master_cplGMM.txt  master_oriGMM.txt  master_posGMM.txt  master_stiffGMM.txt  slave_cplGMM.txt  slave_oriGMM.txt  slave_posGMM.txt  slave_stiffGMM.txt
bimanual-task-models/scooping_task/action 4/: action4_specification.yaml  master_cplGMM.txt  master_oriGMM.txt  master_posGMM.txt  master_stiffGMM.txt  slave_cplGMM.txt  slave_oriGMM.txt  slave_posGMM.txt  slave_stiffGMM.txt
bimanual-task-models/scooping_task/action1/: action1.yaml  readme.txt
bimanual-task-models/test_task/: README
bimanual_smach/: CMakeLists.txt  package.xml
launch/: bimanual_joint_ctrls_sim.launch
(+38 files in other folders)
