<?xml version="1.0"?>
<package>
  <name>bimanual_motion_planner</name>
  <version>0.0.0</version>
  <description>The bimanual_motion_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nadia.figueroafernandez@epfl.ch">nbfigueroa</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/state_transformers</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>roscpp</build_depend> 
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>mathlib</build_depend> 
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>robotlib</build_depend> 
  <build_depend>std_tools</build_depend> 
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>tf</build_depend> 
  <build_depend>iai_control_msgs</build_depend> 
  <build_depend>bimanual_action_planners</build_depend> 
  <build_depend>cds_execution</build_depend> 
  <build_depend>netft_rdt_driver</build_depend>
  <!-- <build_depend>robohow_common_msgs</build_depend>  -->
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>bimanual_ds_execution</build_depend>
  <build_depend>sgaussians</build_depend>

  <run_depend>sensor_msgs</run_depend> 
  <run_depend>roscpp</run_depend> 
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>mathlib</run_depend> 
  <run_depend>robotlib</run_depend> 
  <run_depend>std_tools</run_depend> 
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>  
  <run_depend>iai_control_msgs</run_depend>
  <run_depend>bimanual_action_planners</run_depend> 
  <run_depend>cds_execution</run_depend> 
  <run_depend>netft_rdt_driver</run_depend>
  <!-- <run_depend>robohow_common_msgs</run_depend> -->
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>bimanual_ds_execution</run_depend>
  <run_depend>sgaussians</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
